<?xml version="1.0"?>
<package format="2">

  <name>head_ref</name>
  <version>0.0.0</version>
  <description>Generic head reference package which implements an actionserver with multiple clients which can send head references with priorities.</description>

  <maintainer email="rein@todo.todo">rein</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>head_ref_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>urdf</depend>
  <depend>visualization_msgs</depend>

</package>
